--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <script>
-        
+        //Create function to get the computers result for the actual game
+        function computerPlay(){
+            //Generate a random value in the range of 0 to 1
+            let result = Math.random();
+            //IF the result is less then 1/3 then its Rock
+            if(result < (1/3)) return "Rock";
+            //IF the result is between 1/3 and 2/3 then its Paper
+            else if(result < (2/3) && result > (1/3)) return "Paper";
+            //ELSE the result is Scissors
+            else return "Scissors";
+        }
     </script>
 </body>
 </html>
