--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         //Create a function to prompt the user for a selection
         //Make it case insensitive and handle errors (do not accept any input)
-        function playerSelection(){
+        function promptPlayer(){
             //prompt user to enter selection
             let userInput = window.prompt("Type in your selection: ");
             //Make input fully lower case
@@ -32,6 +32,28 @@
             //If not, return undefined
             else return undefined;
         }
+
+        const playerSelection = "rock";
+        const computerSelection = computerPlay();
+
+        //Create a function that checks who is the winner
+        function playRound(playerSelection, computerSelection){
+            playerSelection = playerSelection.toLowerCase();
+            //Create if for the winner possibilities
+            if((playerSelection == "rock" && computerSelection == "scissors") ||
+               (playerSelection == "paper" && computerSelection == "rock") ||
+               (playerSelection == "scissors" && computerSelection == "paper"))
+               return "You Win! " + playerSelection + " beats " + computerSelection;
+            //Create if for the tie possibilites
+            else if((playerSelection == "rock" && computerSelection == "rock") ||
+                    (playerSelection == "paper" && computerSelection == "paper") ||
+                    (playerSelection == "scissors" && computerSelection == "scissors"))
+                return "It's a Tie!";
+            //Create if for the lose possibilities
+            else return "You Lose! " + computerSelection + " beats " + playerSelection;
+        }
+
+        console.log(playRound(playerSelection, computerSelection));
     </script>
 </body>
 </html>
