Add announcement on final result

--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
             }
             
             // after the 5 runs announce the final result
-
+            if(playerScore > computerScore)
+                console.log("You win the game! Final result is (P - C) " + playerScore + " - " + computerScore);
+            else if(playerScore < computerScore)
+                console.log("You lose the game! Final result is (P - C) " + playerScore + " - " + computerScore);
+            else
+                console.log("It's a tie! Final result is (P - C) " + playerScore + " - " + computerScore);
         }
 
     </script>
