--- a/index.html
+++ b/index.html
@@ -7,65 +7,80 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div id="result-container"></div>
+
     <script>
+        const resultContainer = document.querySelector('#result-container');
+        const gameResult = document.createElement('div');
+        const score = document.createElement('div');
+        resultContainer.appendChild(gameResult);
+        resultContainer.appendChild(score);
+        
+        let playerScore = 0, computerScore = 0;
+        let playCounter = 0;
+
         //Create function to get the computers result for the actual game
         function computerPlay(){
             //Generate a random value in the range of 0 to 1
             let result = Math.random();
             //IF the result is less then 1/3 then its Rock
-            if(result < (1/3)) return "rock";
+            if(result <= (1/3)) return "rock";
             //IF the result is between 1/3 and 2/3 then its Paper
-            else if(result < (2/3) && result > (1/3)) return "paper";
+            else if(result <= (2/3) && result > (1/3)) return "paper";
             //ELSE the result is Scissors
             else return "scissors";
-        }
-
-        //Create a function to prompt the user for a selection
-        //Make it case insensitive and handle errors (do not accept any input)
-        function promptPlayer(){
-            let validEntry = false;
-            while(!validEntry){
-                //prompt user to enter selection
-                let userInput = window.prompt("Type in your selection (rock, paper or scissors): ");
-                //Make input fully lower case
-                userInput = userInput.toLowerCase();
-                //Check if value is rock, paper or scissors
-                if(userInput == "rock" || userInput == "paper" || userInput == "scissors") return userInput;
-                //If not, do not return!
-                else console.log("Entry is not valid!");
-            }
         }
 
         //Create a function that checks who is the winner
         function playRound(playerSelection, computerSelection){
             playerSelection = playerSelection.toLowerCase();
+            playCounter += 1;
             //Create if for the winner possibilities
             if((playerSelection == "rock" && computerSelection == "scissors") ||
                (playerSelection == "paper" && computerSelection == "rock") ||
-               (playerSelection == "scissors" && computerSelection == "paper"))
-               //return "You Win! " + playerSelection + " beats " + computerSelection;
+               (playerSelection == "scissors" && computerSelection == "paper")){
+               gameResult.textContent = "You win!";
+               playerScore += 1;
                return "win";
+               }
             //Create if for the tie possibilites
             else if((playerSelection == "rock" && computerSelection == "rock") ||
                     (playerSelection == "paper" && computerSelection == "paper") ||
-                    (playerSelection == "scissors" && computerSelection == "scissors"))
-                //return "It's a Tie!";
-                return "tie";
+                    (playerSelection == "scissors" && computerSelection == "scissors")){
+                        gameResult.textContent = "It's a tie!";
+                        return "tie";
+                    }
             //Create if for the lose possibilities
             else{
-                //return "You Lose! " + computerSelection + " beats " + playerSelection;
+                gameResult.textContent = "You lose!";
+                computerScore += 1;
                 return "lose";
             }
         }
 
+        const rockButton = document.querySelector('#rock');
+        rockButton.addEventListener('click', () => {
+            console.log(playRound('rock', computerPlay()));
+        });
+        const paperButton = document.querySelector('#paper');
+        paperButton.addEventListener('click', () => {
+            console.log(playRound('paper', computerPlay()));
+        });
+        const scissorsButton = document.querySelector('#scissors');
+        scissorsButton.addEventListener('click', () => {
+            console.log(playRound('scissors', computerPlay()));
+        });
+
         //create a function for running 5 games and store the results
-        function game(){
+        /* function game(){
             //create variables to store the results
-            let playerScore = 0, computerScore = 0;
             //Create variables to store selections
             let playerSelection, computerSelection;
             //create variable for while loops counter value
-            let counter = 0;
             //Run the whole process 5 times
             while(counter != 5)
             {
@@ -76,38 +91,38 @@
                 computerSelection = undefined;
                 //get input from user
                 playerSelection = promptPlayer();
-                //Check players selection, if its valid
+                    //Check players selection, if its valid
                 if(playerSelection != undefined){
                     //run computerPlay to get computers selection
-                    computerSelection = computerPlay();
+                        computerSelection = computerPlay();
                     //call playRound to get the result
                     roundResult = playRound(playerSelection, computerSelection);
-                    //increment result counter, announce round result
+                        //increment result counter, announce round result
                     if(roundResult == "win") {
                         playerScore++;
                         console.log("You Win! Player: " + playerScore + " Computer: " + computerScore);
-                    }
+                        }
                     else if(roundResult == "lose") {
                         computerScore++;
                         console.log("You Lose! Player: " + playerScore + " Computer: " + computerScore);
-                    }
+                        }
                     else{
                         console.log("It's a tie! Player: " + playerScore + " Computer: " + computerScore);
-                    }
+                        }
                     //increment counter
                     counter++;
                 }
                 else console.log("Players selection is not valid!");
-            }
+                }
             
             // after the 5 runs announce the final result
             if(playerScore > computerScore)
                 console.log("You win the game! Final result is (P - C) " + playerScore + " - " + computerScore);
-            else if(playerScore < computerScore)
+                else if(playerScore < computerScore)
                 console.log("You lose the game! Final result is (P - C) " + playerScore + " - " + computerScore);
-            else
+                else
                 console.log("It's a tie! Final result is (P - C) " + playerScore + " - " + computerScore);
-        }
+        } */
 
     </script>
 </body>
